# serializer version: 1
# name: test_deterministic_ordering[session-tracked-async-aiosqlite_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering[session-tracked-async-asyncmy_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering[session-tracked-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering[session-tracked-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering[session-tracked-sync-sqlite_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-async-aiosqlite_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-async-asyncmy_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_deterministic_ordering_mixed_with_user_ordering[session-tracked-sync-sqlite_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.name ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_FIRST-aiosqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_FIRST-asyncmy_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_FIRST-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_FIRST-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_LAST-aiosqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_LAST-asyncmy_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_LAST-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-async-ASC_NULLS_LAST-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_FIRST-aiosqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio DESC
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_FIRST-asyncmy_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio DESC
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_FIRST-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_FIRST-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_LAST-aiosqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio DESC
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_LAST-asyncmy_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio DESC
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_LAST-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-async-DESC_NULLS_LAST-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-sync-ASC_NULLS_FIRST-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-sync-ASC_NULLS_FIRST-sqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-sync-ASC_NULLS_LAST-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-sync-ASC_NULLS_LAST-sqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio ASC
  '''
# ---
# name: test_nulls[session-tracked-sync-DESC_NULLS_FIRST-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-sync-DESC_NULLS_FIRST-sqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL DESC, user.bio DESC
  '''
# ---
# name: test_nulls[session-tracked-sync-DESC_NULLS_LAST-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-sync-DESC_NULLS_LAST-sqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   ORDER BY user.bio IS NULL ASC, user.bio DESC
  '''
# ---
# name: test_order_by[session-tracked-async-ASC-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-async-ASC-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-async-ASC-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-async-ASC-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-async-DESC-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by[session-tracked-async-DESC-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by[session-tracked-async-DESC-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by[session-tracked-async-DESC-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by[session-tracked-sync-ASC-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-sync-ASC-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness ASC
  '''
# ---
# name: test_order_by[session-tracked-sync-DESC-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by[session-tracked-sync-DESC-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-avg-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-avg-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-avg-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-avg-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-max-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-max-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-max-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-max-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-min-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-min-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-min-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-min-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddev-asyncmy_engine]
  '''
  WITH aggregation_0 AS (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN aggregation_0
      ON color.id = aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddev-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddev-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevPop-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevPop-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevPop-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevSamp-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevSamp-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-stddevSamp-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-sum-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-sum-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-sum-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-sum-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varPop-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varPop-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varPop-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varSamp-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varSamp-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-varSamp-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-variance-asyncmy_engine]
  '''
  WITH aggregation_0 AS (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN aggregation_0
      ON color.id = aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-variance-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-ASC-variance-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-avg-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-avg-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-avg-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-avg-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-max-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-max-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-max-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-max-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-min-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-min-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-min-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-min-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddev-asyncmy_engine]
  '''
  WITH aggregation_0 AS (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN aggregation_0
      ON color.id = aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddev-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddev-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevPop-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevPop-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevPop-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevSamp-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevSamp-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-stddevSamp-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-sum-aiosqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-sum-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-sum-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-sum-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varPop-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varPop-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varPop-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varSamp-asyncmy_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varSamp-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-varSamp-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-variance-asyncmy_engine]
  '''
  WITH aggregation_0 AS (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN aggregation_0
      ON color.id = aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-variance-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-async-DESC-variance-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-avg-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-avg-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-max-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-max-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-min-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-min-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-stddev-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-stddevPop-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-stddevSamp-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-sum-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-sum-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-varPop-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-varSamp-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-ASC-variance-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-avg-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-avg-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.avg_fruits__avg_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-max-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-max-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.max_fruits__max_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-min-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-min-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.min_fruits__min_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-stddev-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.stddev_fruits__stddev_water_percent DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-stddevPop-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_pop_fruits__stddev_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-stddevSamp-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.stddev_samp_fruits__stddev_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-sum-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-sum-sqlite_engine]
  '''
  WITH __strawchemy_aggregation_0 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN __strawchemy_aggregation_0
      ON color.id = __strawchemy_aggregation_0.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.sum_fruits__sum_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-varPop-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_pop_fruits__var_pop_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-varSamp-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS __strawchemy_aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY __strawchemy_aggregation_0.var_samp_fruits__var_samp_water_percent DESC,
            color__fruits.id ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-sync-DESC-variance-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0.variance_fruits__variance_water_percent DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-ASC-aiosqlite_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness ASC) AS rank
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness ASC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-ASC-asyncmy_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness ASC) AS `rank`
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness ASC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-ASC-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-ASC-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-DESC-aiosqlite_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness DESC) AS rank
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness DESC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-DESC-asyncmy_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness DESC) AS `rank`
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness DESC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-DESC-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-async-DESC-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-sync-ASC-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-sync-ASC-sqlite_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness ASC) AS rank
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness ASC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness ASC
  '''
# ---
# name: test_relation_order_by[session-tracked-sync-DESC-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-sync-DESC-sqlite_engine]
  '''
  WITH color__fruits AS (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id,
                 fruit_1.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY fruit_1.color_id ORDER BY fruit_1.sweetness DESC) AS rank
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id,
                    fruit_1.sweetness,
                    fruit_1.id
           ORDER BY fruit_1.sweetness DESC
         ) SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY color.id ASC,
            color__fruits.sweetness DESC
  '''
# ---
